--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 # DATABASE H2
-spring.datasource.url=jdbc:h2:mem:chatbotDB;MODE=MySQL;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:chatbotDB;MODE=MySQL;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -12,4 +12,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 
-endpoint.auth.validate.enabled=true
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=myuser
+spring.rabbitmq.password=secret
+
+spring.docker.compose.enabled=false
