:sparkles: feat: fluxo de conversa para evento Cliente Para Cadastrar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,24 @@
 spring.application.name=Chatbot
-spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev}
 server.port = 8081
 server.error.include-message=always
 server.error.include-binding-errors=always
-
-# DATABASE MYSQL
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
 
 # RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=myuser
 spring.rabbitmq.password=secret
+
+# PERFIL ATIVO
+spring.profiles.active=${SPRING_PROFILE_ACTIVE:dev-terminal}
+
+# GRUPOS DE PERFIS
+# Combinações para desenvolvimento
+spring.profiles.group.dev-terminal=db-dev, terminal
+spring.profiles.group.dev-telegram=db-dev, telegram
+spring.profiles.group.dev-whatsapp=db-dev, whatsapp
+
+# Combinações para produção
+spring.profiles.group.prod-terminal=db-prod, terminal
+spring.profiles.group.prod-telegram=db-prod, telegram
+spring.profiles.group.prod-whatsapp=db-prod, whatsapp
