--- a/src/main/resources/application-db-dev.properties
+++ b/src/main/resources/application-db-dev.properties
@@ -1,3 +1,5 @@
+spring.application.name=ChatbotDEV
+
 # DATABASE H2
 spring.datasource.url=jdbc:h2:mem:chatbotDB;MODE=MySQL;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
